--- a/Project-Retake/Views/Reservation/AllReservation.cshtml
+++ b/Project-Retake/Views/Reservation/AllReservation.cshtml
@@ -1,4 +1,4 @@
-﻿@using Project.Models.ReservationView
+﻿@using Project.Core.Models.ReservationView
 @model IEnumerable<ReservationInfoViewModel>
 @{
     ViewBag.Title = "All Reservation";
