--- a/Project-Retake/Views/Restaurant/Details.cshtml
+++ b/Project-Retake/Views/Restaurant/Details.cshtml
@@ -63,7 +63,7 @@
 
 
                         }
-                        <textarea name="commentText" class="form-control" aria-required="true" rows="4" style="width: 25rem;"></textarea>
+                        <textarea name="commentText" class="form-control" aria-required="true" rows="4" style="width: 25rem;" required></textarea>
                         <input type="hidden" name="restaurantId" value="@Model.Id" />
                         <label for="rating">Рейтинг:</label>
                         <input type="number" name="rating" id="rating" min="1" max="5" class="form-control" style="width: 5rem;" required>
