--- a/Project-Retake/Views/Restaurant/Edit.cshtml
+++ b/Project-Retake/Views/Restaurant/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@using Project.Enums
+﻿@using Project.Infrastructure.Enums
 @model RestaurantFormViewModel
 @{
     ViewBag.Title = "Редактирай ресторант";
