--- a/Project-Retake/Views/Home/Index.cshtml
+++ b/Project-Retake/Views/Home/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model HomeIndexViewModel
+﻿@using Project.Core.Models.OtherViews
+@model HomeIndexViewModel
 @{
     ViewData["Title"] = "Home Page";
     var restaurants = Model.Restaurants;
