--- a/Project-Retake/Views/Restaurant/Add.cshtml
+++ b/Project-Retake/Views/Restaurant/Add.cshtml
@@ -1,4 +1,4 @@
-﻿@using Project.Enums
+﻿@using Project.Infrastructure.Enums
 @model RestaurantFormViewModel
 @{
     ViewBag.Title = "Добави Ресторант";
