--- a/Project-Retake/Views/Restaurant/All.cshtml
+++ b/Project-Retake/Views/Restaurant/All.cshtml
@@ -1,4 +1,4 @@
-﻿@using Project.Enums
+﻿@using Project.Infrastructure.Enums
 @model IEnumerable<RestaurantInfoViewModel>
 @{
     ViewBag.Title = "Всички ресторанти";
